--- a/apps/frontend/src/variables.scss
+++ b/apps/frontend/src/variables.scss
@@ -1,6 +1,5 @@
-$bg-color: #212121;
-$text-color: #a1a1a1;
-$primary-color: #fff;
-$heading-color: #78d2ff;
 $button-color: #3d4864;
 $roboto-font-family: 'Roboto', Arial, sans-serif;
+$primary-color: #fff;
+$secondary-color: #394462;
+$ternary-color: #d7d7d7;
