--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -10,9 +10,12 @@
         url('assets/fonts/roboto/thin.ttf') format('truetype');
 }
 
-body {
-    background-color: $bg-color !important;
-}
 * {
     box-sizing: border-box !important;
+}
+body {
+    background: radial-gradient(circle at center, #394462 5%, #0a101e 30%);
+    background-repeat: no-repeat;
+    height: 100vh;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif !important;
 }
