--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -15,7 +15,18 @@
 }
 body {
     background: radial-gradient(circle at center, #394462 5%, #0a101e 30%);
-    background-repeat: no-repeat;
     height: 100vh;
     font-family: 'Roboto', Arial, Helvetica, sans-serif !important;
+}
+.simple-url::after {
+    content: '';
+    position: absolute;
+    top: 200px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url('../../frontend/src/assets/images/background-pattern.png') no-repeat;
+    background-size: contain;
+    background-position: right 70%;
+    z-index: -1;
 }
