--- a/apps/frontend/src/modules/shortlink/components/create/create.component.html
+++ b/apps/frontend/src/modules/shortlink/components/create/create.component.html
@@ -2,14 +2,17 @@
     <!-- Main Content Section -->
     <main class="simple-url">
         <!-- Page Heading with Title and Sub-title -->
-        <h1 class="display-5">
-            <!-- Icon for decorative purpose with main title -->
-            Link Your World with <span>QR</span> &
-            <span>Short Links</span>
-            <br />
-            <!-- Tagline of the service -->
-            “Effortless Sharing, Anytime, Anywhere"
-        </h1>
+        <div class="d-flex header-area">
+            <!-- Icon for decorative purpose -->
+            <i class="bi bi-stars"></i>
+            <!-- Main title -->
+            <h1 class="display-5 m-0">
+                Link Your World With <span>QR</span> & <span>Short Links</span>
+                <br />
+                <!-- Tagline of the service -->
+                <small>“Effortless Sharing, Anytime, Anywhere"</small>
+            </h1>
+        </div>
 
         <!-- Tab Navigation to switch between Short Link and QR Code functionalities -->
         <div class="tab-navigation">
