--- a/apps/frontend/src/styles.scss
+++ b/apps/frontend/src/styles.scss
@@ -20,13 +20,13 @@ body {
 }
 .simple-url::after {
     content: '';
-    position: absolute;
+    position: fixed;
     top: 200px;
     left: 0;
     right: 0;
     bottom: 0;
     background: url('../../frontend/src/assets/images/background-pattern.png') no-repeat;
     background-size: contain;
-    background-position: right 70%;
+    background-position: right bottom;
     z-index: -1;
 }
